# SecureDesk

./: .gitignore  ARCHITECTURE.md  README.md  SECURITY_REPORT.md  whitepaper.md
api/: go.mod
api/cmd/: main.go
api/internal/addressbook/: addressbook.go
api/internal/audit/: audit.go
api/internal/auth/: auth.go
api/internal/database/: database.go  redis.go
api/internal/devices/: devices.go
api/internal/license/: license.go
api/internal/middleware/: middleware.go
api/internal/payment/: btcpay.go
api/internal/security/: security.go
api/internal/users/: users.go
app/: generate-icons.js  index.html  package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  securedesk.desktop  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: capture.rs  cli.rs  client.rs  clipboard.rs  config.rs  crypto.rs  host.rs  input.rs  license.rs  main.rs  p2p.rs  privacy.rs  protocol.rs  qos.rs  recording.rs  sso.rs  stun.rs  transport.rs
app/src/components/: ConnectionPopup.css  ConnectionPopup.tsx  RemoteConnect.css  RemoteConnect.tsx  SessionView.css  SessionView.tsx  Settings.css  Settings.tsx  ThisDevice.css  ThisDevice.tsx  TitleBar.css  TitleBar.tsx
app/src/styles/: app.css  global.css
portal/: index.html  package-lock.json  package.json  vite.config.ts
portal/src/: App.tsx  index.css
portal/src/api/: client.ts
portal/src/components/: Layout.tsx
portal/src/pages/: Dashboard.tsx  Devices.tsx  Login.tsx  Register.tsx  Settings.tsx  Subscription.tsx
portal/src/store/: auth.ts
server/: go.mod  main.go
server/relay/: client.go  server.go  session.go
shared/proto/: protocol.md
