[package]
name = "securedesk"
version = "0.1.0"
description = "SecureDesk - Privacy-Preserving Remote Desktop"
authors = ["SecureDesk"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
webpki-roots = "0.26"

# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
snow = "0.9"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
blake3 = "1.5"
rand = "0.8"
getrandom = "0.2"

# Image encoding
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }

# Misc
anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
once_cell = "1.19"
base64 = "0.21"
async-trait = "0.1"
socket2 = "0.5"
dirs = "5.0"
clap = { version = "4.4", features = ["derive"] }

# HTTP client for SSO/OIDC
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }

# Windows APIs (for screen capture, input, and clipboard)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
] }

# macOS APIs (for screen capture and input)
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
dispatch = "0.2"

# Linux APIs (for screen capture and input)
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xtest", "xrandr"] }
x11rb = { version = "0.13", features = ["shm", "randr", "xfixes"] }
libc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

